Several bugfixes:  - Previously, users with the create permission on the component, but not full special permissions on the backend, could not create new files. This is now fixed  - The controller didn't correctly double check if the user had the correct permissions. Even if a user manages to send the form data, the controller will disallow the operation of the user does not have edit or create permissions
Improvements:
 - The sorting of elements is now reversed, so the newest item is always on top

--- a/admin/language/en-GB/en-GB.com_periodicals.ini
+++ b/admin/language/en-GB/en-GB.com_periodicals.ini
@@ -34,3 +34,4 @@ COM_PERIODICALS_FILE_TO_LARGE_THAN_HTML_FORM_ALLOWS="The file is too large"
 COM_PERIODICALS_ERROR_PARTIAL_UPLOAD="Uploading of the file failed"
 COM_PERIODICALS_ERROR_NO_FILE="No file was selected"
 COM_PERIODICALS_FILE_TO_BIG="The file is too large"
+COM_PERIODICALS_OPERATION_NOT_ALLOWED="You do not have permission to execute this action"
