--- a/admin/language/en-GB/en-GB.com_periodicals.sys.ini
+++ b/admin/language/en-GB/en-GB.com_periodicals.sys.ini
@@ -1,6 +1,6 @@
 COM_PERIODICALS_MENU="Periodicals"
 COM_PERIODICALS="Periodicals"
-COM_PERIODICALS_DESCRIPTION=Component to upload periodics or news magazines in pdf format, to enumerate those items from newest to oldest on your site with a link to the pdf file"
+COM_PERIODICALS_DESCRIPTION="Component to upload periodics or news magazines in pdf format, to enumerate those items from newest to oldest on your site with a link to the pdf file"
 
 
 COM_PERIODICALS_DEFAULT_TITLE="List of periodicals"
