--- a/admin/language/nl-NL/nl-NL.com_periodicals.ini
+++ b/admin/language/nl-NL/nl-NL.com_periodicals.ini
@@ -34,3 +34,4 @@ COM_PERIODICALS_FILE_TO_LARGE_THAN_HTML_FORM_ALLOWS="Het bestand is te groot"
 COM_PERIODICALS_ERROR_PARTIAL_UPLOAD="Het bestand kon niet worden geupload"
 COM_PERIODICALS_ERROR_NO_FILE="Er is geen bestand geselecteerd"
 COM_PERIODICALS_FILE_TO_BIG="Het bestand is te groot"
+COM_PERIODICALS_OPERATION_NOT_ALLOWED="U heeft geen toegang tot deze operatie"
