Fixed language strings

--- a/admin/language/en-GB/en-GB.com_periodicals.sys.ini
+++ b/admin/language/en-GB/en-GB.com_periodicals.sys.ini
@@ -1,6 +1,7 @@
 COM_PERIODICALS_MENU="Periodicals"
 COM_PERIODICALS="Periodicals"
 COM_PERIODICALS_DESCRIPTION="Component to upload periodics or news magazines in pdf format, to enumerate those items from newest to oldest on your site with a link to the pdf file"
+COM_PERIODICALS_CONFIGURATION="Periodicals: Options"
 
 
 COM_PERIODICALS_DEFAULT_TITLE="List of periodicals"
@@ -16,7 +17,7 @@ COM_PERIODICALS_USE_YEAR_DESC="With this option selected, every periodical can b
 COM_PERIODICALS_USE_MONTH_LABEL="Use months"
 COM_PERIODICALS_USE_MONTH_DESC="With this option selected, every periodical can be assigned a month. This option should be used if new periodicals come out at least once twice a year. If this option is used, it is good practice to enable years as well."
 COM_PERIODICALS_USE_DAY_LABEL="Use days"	
-COM_PERIODICALS_USE_DAY_DESC=With this option selected, every periodical can be assigned a day. This option should be used if new periodicals come out at least twice a month. If this option is used, it is good practice to enable months as well."
+COM_PERIODICALS_USE_DAY_DESC="With this option selected, every periodical can be assigned a day. This option should be used if new periodicals come out at least twice a month. If this option is used, it is good practice to enable months as well."
 COM_PERIODICALS_SETTINGS_FOLDER_LABEL="Default folder"
 COM_PERIODICALS_SETTINGS_FOLDER_DESC="Files will be uploaded to this directory automatically. When no folder is used, the files will be hidden. This is a good idea if you don't want to accidentally delete files."
 COM_PERIODICALS_SETTINGS_OBSCURE_TITLES_LABEL="Random titels"
