--- a/admin/language/nl-NL/nl-NL.com_periodicals.sys.ini
+++ b/admin/language/nl-NL/nl-NL.com_periodicals.sys.ini
@@ -1,7 +1,7 @@
 COM_PERIODICALS_MENU="Periodieken"
 COM_PERIODICALS="Periodieken"
 COM_PERIODICALS_DESCRIPTION="Component om periodieken of nieuwsbladen als pdf-bestanden te uploaden, te linken aan een jaar, datum en/of dag, en deze als links te tonen op de website"
-
+COM_PERIODICALS_CONFIGURATION="Periodieken: Opties"
 
 COM_PERIODICALS_DEFAULT_TITLE="Lijst van nieuwsbladen"
 COM_PERIODICALS_VIEW_DEFAULT_DESC="Deze pagina toont een lijst van nieuwsbladen gesorteerd van nieuw naar oud"
